# react-native-bluetooth-nitro-nexus

./: BluetoothNitroNexus.podspec  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bluetoothnitronexus/: BluetoothNitroNexusModule.kt  BluetoothNitroNexusPackage.kt
cpp/: react-native-bluetooth-nitro-nexus.cpp  react-native-bluetooth-nitro-nexus.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/bluetoothnitronexus/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/BluetoothNitroNexusExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/BluetoothNitroNexusExample.xcodeproj/: project.pbxproj
example/ios/BluetoothNitroNexusExample.xcodeproj/xcshareddata/xcschemes/: BluetoothNitroNexusExample.xcscheme
example/ios/BluetoothNitroNexusExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: BluetoothNitroNexus.h  BluetoothNitroNexus.mm
src/: NativeBluetoothNitroNexus.ts  index.tsx
